@startuml

title __CATEGORY's Class Diagram__\n

  namespace jp.ac.shibaura.it.ie {
    namespace domain.application.category {
      class jp.ac.shibaura.it.ie.domain.application.category.CategoryJoinInteractor {
          + handle()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.application.category {
      class jp.ac.shibaura.it.ie.domain.application.category.CategoryListInteractor {
          + handle()
      }
    }
  }
  

  jp.ac.shibaura.it.ie.domain.application.category.CategoryJoinInteractor .up.|> jp.ac.shibaura.it.ie.usecases.category.join.CategoryJoinUseCase
  jp.ac.shibaura.it.ie.domain.application.category.CategoryJoinInteractor o-- jp.ac.shibaura.it.ie.log.LogUtils : logger
  jp.ac.shibaura.it.ie.domain.application.category.CategoryJoinInteractor o-- jp.ac.shibaura.it.ie.domain.model.room.RoomRepository : roomRepository
  jp.ac.shibaura.it.ie.domain.application.category.CategoryJoinInteractor o-- jp.ac.shibaura.it.ie.domain.model.session.SessionRepository : sessionRepository
  jp.ac.shibaura.it.ie.domain.application.category.CategoryJoinInteractor o-- jp.ac.shibaura.it.ie.domain.model.user.UserRepository : userRepository
  jp.ac.shibaura.it.ie.domain.application.category.CategoryListInteractor .up.|> jp.ac.shibaura.it.ie.usecases.category.list.CategoryListUseCase
  jp.ac.shibaura.it.ie.domain.application.category.CategoryListInteractor o-- jp.ac.shibaura.it.ie.domain.model.category.CategoryRepository : categoryRepository
  jp.ac.shibaura.it.ie.domain.application.category.CategoryListInteractor o-- jp.ac.shibaura.it.ie.log.LogUtils : logger


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
